# webots-proto

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
crates/webots-proto/: CHANGELOG.md  Cargo.toml  README.md
crates/webots-proto-ast/: CHANGELOG.md  Cargo.toml  README.md
crates/webots-proto-ast/benches/: parse_benchmark.rs  write_benchmark.rs
crates/webots-proto-ast/examples/: parse_proto.rs  write_proto.rs
crates/webots-proto-ast/src/: error.rs  lib.rs
crates/webots-proto-ast/src/proto/: ast.rs  lexer.rs  mod.rs  parser.rs  span.rs  writer.rs
crates/webots-proto-ast/tests/: ast_round_trip.rs  importable_externproto.rs  property_tests.proptest-regressions  property_tests.rs
crates/webots-proto-resolver/: CHANGELOG.md  Cargo.toml  README.md
crates/webots-proto-resolver/examples/: expand_proto.rs
crates/webots-proto-resolver/src/: lib.rs  resolve.rs
crates/webots-proto-resolver/tests/: circular_dependency_test.rs  resolve_tests.rs
crates/webots-proto-schema/: CHANGELOG.md  Cargo.toml  README.md
crates/webots-proto-schema/examples/: validate_proto.rs
crates/webots-proto-schema/src/: lib.rs  macros.rs  types.rs
crates/webots-proto-schema/src/proto/: builtin_nodes.rs  conversion.rs  schema.rs  validation.rs
crates/webots-proto-schema/src/versions/: mod.rs
crates/webots-proto-schema/src/versions/r2025a/: enums.rs  mod.rs
crates/webots-proto-schema/src/versions/r2025a/nodes/: appearance.rs  cad_shape.rs  devices.rs  environment.rs  geometry.rs  group_pose.rs  joints.rs  lighting.rs  mesh.rs  mod.rs  motors.rs  optics.rs  physics.rs  physics_properties.rs  rectangle_arena.rs  rendering.rs  robot.rs  sensors.rs  shape.rs  slot.rs  solid.rs  transform.rs  viewpoint.rs  world_info.rs
crates/webots-proto-schema/tests/: complex_e2e.rs  enum_tests.rs  proto_deserialization.rs  round_trip.rs  validation_tests.rs  version_handling.rs
crates/webots-proto-template/: CHANGELOG.md  Cargo.toml  README.md
crates/webots-proto-template/examples/: template_rendering.rs  template_rendering_with_options.rs
crates/webots-proto-template/src/: lib.rs  render.rs
crates/webots-proto-template/src/template/: js_api.rs  mod.rs  parser.rs  types.rs
crates/webots-proto-template/tests/: template_execution.rs
crates/webots-proto/examples/: workflow.rs
crates/webots-proto/src/: imports.rs  lib.rs
crates/webots-proto/tests/: e2e_workflows.rs  import_naming_tests.rs  proto_api.rs  runtime_semantics_expansion_tests.rs
fixtures/: Simple.proto
fixtures/resolve/: Child.proto  Nested.proto  Parent.proto  ParentUsesChildDefaults.proto  WithTemplate.proto
