[package]
name = "webots-proto-template"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = true
description = "Template evaluation for Webots PROTO documents."
readme = "README.md"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/webots-proto-template"
keywords = ["webots", "proto", "template", "javascript", "robotics"]
categories = ["compilers", "text-processing", "science::robotics"]

[dependencies]
webots-proto-ast.workspace = true
boa_engine.workspace = true
boa_gc.workspace = true
serde_json.workspace = true
thiserror.workspace = true
derive-new.workspace = true
derive_setters.workspace = true
